2008-05-16  Marcus D. Hanwell  <marcus@cryos.org>

	* CMakeLists.txt: Set the CMake policy for CMake 2.6.

2008-05-15  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* avogadro/mainwindow.h, avogadro/mainwindow.cpp: Changed engine
	configuration to a new button which brings up an extra "settings"
	window with tabs. Add signal/slot for enabling the Engine Settings
	window -- only enables button for engines with settings.

	* src/enginelistview.cpp, primitivetreeview.cpp: 
	Add setUniformItemSizes(true) -- supposedly improves performance.

2008-05-15  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/primitive.cpp, libavogadro/src/glwidget.cpp,
	libavogadro/src/engines/surfaceengine.cpp: Made some changes to the
	surface engine and the GLWidget to improve locking. Seems to have
	prevented crashes in the surface engine here. More locking is needed.

	* libavogadro/src/tools/selectrotatetool.cpp: Added Control modifier
	to the tool to fix PR 1962903 - toggle selected primitives.

	* libavogadro/src/color.h: Cast GLFloats to ints to suppress warning.

	* libavogadro/src/CMakeLists.txt: Only add the Boost_INCLUDE_DIR if
	boost is found - fixes a CMake error with CMake 2.6.

2008-05-14  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/extensions/pythonextension.cpp: Fixed typo.

2008-05-14  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/extensions/animation*.*: Basic animation extension.

	* testfiles/spc216.*: Added pdb topology and xtc trajectory to test
	animation.

2008-05-13  Marcus D. Hanwell  <marcus@cryos.org>

	* CMakeLists.txt: Allow ENABLE_PYTHON variable to allow disabling of
	Python.

	* libavogadro/src/tools/drawtool.cpp: Fixed uninitialised variables.

2008-05-12  Marcus D. Hanwell  <marcus@cryos.org>

	* avogadro/src/mainwindow.cpp: Fixed the code to fail properly when
	the file to be opened does not exist.

2008-05-12  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* libavogadro/src/extensions/propmodel.cpp